plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.8'
    id "com.github.johnrengelman.shadow" version "5.2.0"
}

version '0.0.1'

sourceCompatibility = "11"
targetCompatibility = "11"

repositories {
    flatDir {
        dirs 'libs'
    }
    jcenter()
}

javafx {
    version = "11"
    modules = ['javafx.controls', 'javafx.fxml', 'javafx.graphics']
}

dependencies {
    implementation 'com.calendarfx:view:11.8.3'  exclude group: 'org.openjfx', module: ''
    implementation 'com.jfoenix:jfoenix:9.0.8',
            'org.kordamp.ikonli:ikonli-core:11.3.3',
            'org.kordamp.ikonli:ikonli-javafx:11.3.5',
            'org.kordamp.ikonli:ikonli-materialdesign-pack:11.4.0',
            'io.swagger:swagger-java-client:1.0.0',
            'com.github.jengelman.gradle.plugins:shadow:5.2.0'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.5.2'
}

test {
    dependsOn 'cleanTest'
    useJUnitPlatform()
}

javadoc {
    options.with {
        links 'https://docs.oracle.com/en/java/javase/11/docs/api/'

    }
    options.tags = [
            "implNote:a:Implementation Note:"
    ]
}

application {
    mainClassName = 'jscolendar.Launcher'
}

run {
    jvmArgs = [
            "--add-exports=javafx.base/com.sun.javafx.runtime=ALL-UNNAMED",
            "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED",
            "--add-exports=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED",
            "--add-exports=javafx.base/com.sun.javafx.binding=ALL-UNNAMED",
            "--add-exports=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED",
            "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED",
            "--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED"
    ]
}
